--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -20,14 +20,14 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
-    r-version: 4.1.1
+      r-version: 4.1.1
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up R ${{ matrix.r-version }}
+      - name: Set up R 4.1.1
         uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
         with:
-          r-version: ${{ matrix.r-version }}
+          r-version: 4.1.1
       - name: Install dependencies
         run: |
           install.packages(c("remotes", "rcmdcheck"))
