--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v5
     name: Build & push Docker image
     with:
-      image: repo/image
+      image: nilesh3108/my-project
       tags: v1, latest
       registry: registry-url.io
       dockerfile: Dockerfile.ci
