--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -27,12 +27,13 @@ jobs:
         uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
         with:
           r-version: 4.1.1
+      
+      - name: Build & push Docker image
       - uses: mr-smithers-excellent/docker-build-push@v5
-    name: Build & push Docker image
-    with:
-      image: nilesh3108/my-project
-      tags: v1, latest
-      registry: registry-url.io
-      dockerfile: Dockerfile.ci
-      username: ${{ secrets.DOCKER_USERNAME }}
-      password: ${{ secrets.DOCKER_PASSWORD }}
+        with:
+         image: nilesh3108/my-project
+         tags: v1, latest
+         registry: registry-url.io
+         dockerfile: Dockerfile.ci
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
