--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -28,12 +28,16 @@ jobs:
         with:
           r-version: 4.1.1
       
-      - name: Build & push Docker image
-      - uses: mr-smithers-excellent/docker-build-push@v5
-        with:
-         image: nilesh3108/my-project
-         tags: v1, latest
-         registry: docker.io
-         dockerfile: Dockerfile.ci
-         username: ${{ secrets.DOCKER_USERNAME }}
-         password: ${{ secrets.DOCKER_PASSWORD }}
+     steps:
+       - uses: actions/checkout@v2
+         name: check out code
+         
+       - name: Build & push Docker image
+       - uses: mr-smithers-excellent/docker-build-push@v5
+         with:
+          image: nilesh3108/my-project
+          tags: v1, latest
+          registry: registy-url.io
+          dockerfile: Dockerfile.ci
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
