--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -29,6 +29,7 @@ jobs:
           r-version: 4.1.1
       - name: Install dependencies
         run: |
+         install.packages(remotes)
          remotes::install_deps(dependencies = TRUE)
          remotes::install_cran("rcmdcheck")
          remotes::install_cran("devtools")
