--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -29,11 +29,15 @@ jobs:
           r-version: 4.1.1
       - name: Install dependencies
         run: |
-         install.packages(remotes)
-         remotes::install_deps(dependencies = TRUE)
-         remotes::install_cran("rcmdcheck")
-         remotes::install_cran("devtools")
-         devtools::install()
+          install.packages(c("remotes", "rcmdcheck"))
+          remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
-       
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+         image: nilesh3108/my-project
+         registry: docker.io
+         Dockerfile: Dockerfile.ci
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
        
