--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -29,7 +29,7 @@ jobs:
           r-version: 4.1.1
       - name: Install dependencies
         run: |
-          install.packages(c("remotes", "rcmdcheck"))
+          install.packages("remotes")
           remotes::install_deps(dependencies = TRUE)
         shell: Rscript {0}
       - name: Build and Push Docker Image
