--- a/.github/workflows/rnew.yml
+++ b/.github/workflows/rnew.yml
@@ -27,6 +27,12 @@ jobs:
         uses: r-lib/actions/setup-r@f57f1301a053485946083d7a45022b278929a78a
         with:
           r-version: 4.1.1
+          
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Docker Image
         uses: mr-smithers-excellent/docker-build-push@v4
